diplodocker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diplodocker-svc
  namespace: diplodocker
spec:
  type: ClusterIP
  selector:
    app: diplodocker
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      # nodePort: 30080
